force-app/main/default/objects/Song_Vote__c/Song_Vote__c.object-meta.xml
<CustomObject>
    <label>Song Vote</label>
    <nameField>
        <displayFormat>Vote-{00000}</displayFormat>
        <label>Song Vote Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Song Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>