force-app/main/default/objects/Song_Vote__c/fields/Song__c.field-meta.xml
<CustomField>
    <fullName>Song__c</fullName>
    <label>Song</label>
    <referenceTo>Song__c</referenceTo>
    <relationshipLabel>Song Votes</relationshipLabel>
    <relationshipName>Song_Votes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>