force-app/main/default/objects/Song_Vote__c/fields/Vote_Number__c.field-meta.xml
<CustomField>
    <fullName>Vote_Number__c</fullName>
    <formula>CASE(TEXT(Vote_Points__c),
    &quot;1&quot;, 1,
    &quot;2&quot;, 2,
    &quot;3&quot;, 3,
    &quot;4&quot;, 4,
    &quot;5&quot;, 5,
    &quot;6&quot;, 6,
    &quot;7&quot;, 7,
    &quot;8&quot;, 8,
    &quot;9&quot;, 9,
    &quot;10&quot;, 10,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vote Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>